typescript/checker/tests/conformance/parser/ecmascript5/Statements/BreakStatements/parser_breakInIterationOrSwitchStatement4.ts.stderr
error: UndefinedSymbol {
    sym: Atom('something' type=dynamic),
    span: Span {
        lo: BytePos(
            14,
        ),
        hi: BytePos(
            23,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/Statements/BreakStatements/parser_breakInIterationOrSwitchStatement4.ts:1:15
  |
1 | for (var i in something) {
  |               ^^^^^^^^^

